# -imx-camera-sw-pack-source

./: README.md  SBOM-imx-camera-sw-pack-source_LF6.6.3_P24.1.spdx.json  SCR.txt
imx8mp-camera-sw-pack-ar0144/: README.md  SCR.txt
imx8mp-camera-sw-pack-ar0144/isp-imx/: ar0144_isp-imx.patch
imx8mp-camera-sw-pack-ar0144/isp-imx/dewarp/dewarp_config/: sensor_dwe_ar0144_config.json
imx8mp-camera-sw-pack-ar0144/isp-imx/units/isi/drv/AR0144/: CMakeLists.txt  Sensor0_Entry_ar0144.cfg
imx8mp-camera-sw-pack-ar0144/isp-imx/units/isi/drv/AR0144/calib/AR0144/: AR0144_mono.xml
imx8mp-camera-sw-pack-ar0144/isp-imx/units/isi/drv/AR0144/source/: AR0144.c
imx8mp-camera-sw-pack-ar0144/isp-vvcam/: ar0144_kernel-module-isp-vvcam.patch
imx8mp-camera-sw-pack-ar0144/isp-vvcam/v4l2/sensor/ar0144/: Makefile  ar0144_v1.c
imx8mp-camera-sw-pack-ar0144/linux-imx/: ar0144_linux-imx.patch  imx8mp-evk-ar0144.dts
imx8mp-camera-sw-pack-imx219/: README.md  SCR.txt
imx8mp-camera-sw-pack-imx219/isp-imx/: imx219_isp-imx.patch
imx8mp-camera-sw-pack-imx219/isp-imx/dewarp/dewarp_config/: sensor_dwe_imx219_1080P_config.json
imx8mp-camera-sw-pack-imx219/isp-imx/units/isi/drv/IMX219/: CMakeLists.txt  Sensor0_Entry_imx219.cfg
imx8mp-camera-sw-pack-imx219/isp-imx/units/isi/drv/IMX219/calib/IMX219/: IMX219_8M_02_1080p_linear.xml
imx8mp-camera-sw-pack-imx219/isp-imx/units/isi/drv/IMX219/source/: IMX219.c
imx8mp-camera-sw-pack-imx219/isp-vvcam/: imx219_kernel-module-isp-vvcam.patch
imx8mp-camera-sw-pack-imx219/isp-vvcam/v4l2/sensor/imx219/: Makefile  imx219_mipi_v3.c  imx219_regs_1080p.h
imx8mp-camera-sw-pack-imx219/licenses/: MIT.txt
imx8mp-camera-sw-pack-imx219/linux-imx/: imx219_linux-imx.patch  imx8mp-evk-imx219.dts
imx8mp-camera-sw-pack-ov5647/: README.md  SCR.txt
imx8mp-camera-sw-pack-ov5647/isp-imx/: ov5647_isp-imx.patch
imx8mp-camera-sw-pack-ov5647/isp-imx/units/isi/drv/OV5647/: CMakeLists.txt  Sensor0_Entry_ov5647.cfg
imx8mp-camera-sw-pack-ov5647/isp-imx/units/isi/drv/OV5647/calib/: CMakeLists.txt
imx8mp-camera-sw-pack-ov5647/isp-imx/units/isi/drv/OV5647/calib/OV5647/: OV5647_8M_02_1080p_linear.xml
imx8mp-camera-sw-pack-ov5647/isp-imx/units/isi/drv/OV5647/source/: OV5647.c
imx8mp-camera-sw-pack-ov5647/isp-vvcam/: ov5647_kernel-module-isp-vvcam.patch
imx8mp-camera-sw-pack-ov5647/isp-vvcam/v4l2/sensor/ov5647/: Makefile  ov5647_mipi_v3.c  ov5647_regs_1080p.h
imx8mp-camera-sw-pack-ov5647/linux-imx/: imx8mp-evk-ov5647.dts  ov5647_linux-imx.patch
